--- a/asset/sass/import/_color.scss
+++ b/asset/sass/import/_color.scss
@@ -1,9 +1,10 @@
 // put your brand color here 
 
 $titleColor: #000000;
-$mainColor : #bc5e3a;
+$mainColor : #03A88F;
 $bodyColor: #323232;
 $hover: #043267;
 $tbg: #E4F9ED;
-$liner: linear-gradient(rgb(236, 94, 58) 0%, rgb(249, 186, 99) 100%) 0% 0% no-repeat padding-box padding-box transparent;
+$liner: linear-gradient(247deg, rgba(4,118,110,1) 0%, rgba(19,173,163,1) 57%);
 $primary: rgb(82, 125, 250);
+$brand: #04766e;
