--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -40,7 +40,7 @@
 
 // start header area scss
 #header_top{
-     background-color: rgb(33, 37, 41);
+     background-color: $brand;
      position: fixed;
      top: 0;
      left: 0;
@@ -60,7 +60,7 @@
                }
           }
           img{
-               width: 120px;
+               width: 100%;
           }
      }
      .header_search_box{
@@ -151,7 +151,7 @@
                padding: 12px 0px;
                width: max-content;
                &::after{
-                    color: $mainColor;
+                    color: #fff;
                     top: 3px;
                     position: relative;
                }
@@ -164,7 +164,7 @@
                }
           }
           .user_name{
-               color: $mainColor;
+               color: #fff;
                font-weight: 600;
                font-size: 15px;
                margin-left: 6px;
@@ -384,6 +384,7 @@
 
 // cashbackStores
 #cashbackStores{
+     padding-top: 50px;
      padding-bottom: 50px;
      .miainTabPreviewContent{
           margin-top: 30px;
@@ -437,7 +438,7 @@
                          a,button{
                               font-weight: 600;
                               font-size: 15px;
-                              color: #bc5e3a;
+                              color: $mainColor;
                          }
                     }
                     .mainCardContent{
@@ -617,7 +618,7 @@
                     padding: 0px 40px;
                     h4{
                          font-size: 25px;
-                         color: rgb(248, 174, 94);
+                         color: $mainColor;
                          font-weight: 600;
                     }
                     p{
@@ -685,7 +686,7 @@
      padding: 50px 0px;
      .footerLink{
           h4{
-               color: rgb(244, 179, 89);
+               color: $mainColor;
                word-spacing: 1.3px;
                font-weight: 600;
                font-size: 18px;
@@ -699,7 +700,7 @@
                          color: #fff;
                          font-size: 14px;
                          &:hover{
-                              color: rgb(244, 179, 89);
+                              color: $mainColor;
                               text-decoration: underline;
                          }
                     }
@@ -709,14 +710,14 @@
      .footerLogo{
           .logoBox{
                img{
-                    height: 35px;
+                    width: 50%;
                }
           }
      }
      .socialConnect{
           margin-top: 20px;
           h4{
-               color: rgb(244, 179, 89);
+               color: $mainColor;
                word-spacing: 1.3px;
                font-weight: 600;
                font-size: 18px;
@@ -733,7 +734,7 @@
                          height: 40px;
                          width: 40px;
                          &:hover{
-                              color: rgb(244, 179, 89);
+                              color: $mainColor;
                          }
                     }
                }
@@ -741,7 +742,7 @@
      }
      .contactInfo{
           h4{
-               color: rgb(244, 179, 89);
+               color: $mainColor;
                word-spacing: 1.3px;
                font-weight: 600;
                font-size: 18px;
@@ -908,7 +909,7 @@
                          font-size: 10px;
                     }
                     a{
-                         color: #bc5e3a;
+                         color: $mainColor;
                     }
                }
           }
@@ -1092,7 +1093,7 @@
           width: 50%;
           .topContent{
                h4{
-                    color: #73D13D;
+                    color: $mainColor;
                     font-size: 30px;
                     font-weight: 500;
                }
@@ -1117,7 +1118,7 @@
                a{
                     font-weight: 600;
                     font-size: 16px;
-                    color: #BC5E3A;
+                    color: $mainColor;
                     margin-top: 3px;
                     display: inline-block;
                }
@@ -1130,7 +1131,7 @@
           margin-top: 15px;
           .topDetailsArea{
                box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 20px;
-               border: 2px solid rgb(244, 179, 89);
+               border: 2px solid $mainColor;
                padding: 30px 20px;
                background-color: #fff;
                .brandPreview{
@@ -1165,7 +1166,7 @@
                          }
                          p{
                               margin-left: 10px;
-                              color: rgb(236, 94, 58);
+                              color: $mainColor;
                               font-weight: 600;
                               font-size: 15px;
                          }
@@ -1233,7 +1234,7 @@
                .iconBox{
                     height: 70px;
                     width: 70px;
-                    background: linear-gradient(rgb(236, 94, 58) 0%, rgb(249, 186, 99) 100%) 0% 0% no-repeat padding-box padding-box transparent;
+                    background: $liner;
                     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 6px;
                     display: flex;
                     justify-content: center;
@@ -1282,7 +1283,7 @@
                          a,button{
                               font-weight: 600;
                               font-size: 14px;
-                              color: #BC5E3A;
+                              color: $mainColor;
                          }
                     }
                }
@@ -1530,14 +1531,14 @@
                                         span{
                                              font-weight: 400;
                                              font-size: 14px;
-                                             color: #BC5E3A;
+                                             color: $mainColor;
                                         }
                                    }
                                    .activeButton{
                                         margin-top: 15px;
                                         a,button{
                                              display: block;
-                                             background: rgb(82, 125, 250);
+                                             background: $liner;
                                              color: #fff;
                                              font-weight: 700;
                                              font-size: 14px;
@@ -1556,16 +1557,16 @@
                     .actionButton{
                          margin-top: 30px;
                          a,button{
-                              border: 1px solid rgb(238, 113, 81);
+                              border: 1px solid $mainColor;
                               border-radius: 35px;
                               padding: 10px 30px;
                               font-weight: 400;
                               font-size: 14px;
-                              color: #BC5E3A;
+                              color: $mainColor;
                               display: table;
                               margin: 0 auto;
                               &:hover,&:focus{
-                                   background-color: rgb(238, 113, 81);
+                                   background: $liner;
                                    color: #fff;
                               }
                          }
@@ -1705,11 +1706,11 @@
                                    display: inline-block;
                               }
                               &:hover{
-                                   color: #EE7151;
+                                   color: $mainColor;
                               }
                          }
                          .active{
-                              color: #EE7151;
+                              color: $mainColor;
                          }
                     }
                }
@@ -1731,7 +1732,7 @@
                          p{
                               font-size: 20px;
                               font-weight: 300;
-                              color: #EE7151;
+                              color: $mainColor;
                               margin-top: 5px;
                          }
                     }
@@ -1876,7 +1877,7 @@
                                    display: flex;
                                    align-items: center;
                                    margin-left: 20px;
-                                   color: #EE7151;
+                                   color: $mainColor;
                                    font-weight: 700;
                                    font-size: 20px;
                                    img{
@@ -1893,7 +1894,7 @@
                               margin-top: 15px;
                               font-weight: 700;
                               font-size: 14px;
-                              color: #F4B359;
+                              color: #03A88F;
                          }
                     }
                     .balanceOverView{
@@ -2062,7 +2063,7 @@
                a{
                     font-weight: 500;
                     font-size: 13px;
-                    color: #BC5E3A;
+                    color: $mainColor;
                }
           }
      }
@@ -2141,13 +2142,13 @@
                     }
                     &:hover,&:focus{
                          .form-control{
-                              border-color: rgb(244, 179, 89);
+                              border-color: $mainColor;
                          }
                          .form-control:disabled{
                               border-color: #eee !important;
                          }
                          label{
-                              color: rgb(244, 179, 89);
+                              color: $mainColor;
                          }
                     }
                }
@@ -2169,7 +2170,7 @@
                          display: block;
                          span{
                               font-weight: 600;
-                              color: rgb(238, 102, 62);
+                              color: $mainColor;
                               text-decoration: underline;
                               font-size: 15px;
                               margin-left: 5px;
@@ -2194,7 +2195,7 @@
                               font-weight: 600;
                               font-size: 13px;
                               a{
-                                   color: rgb(244, 179, 89);
+                                   color: $mainColor;
                                    margin-left: 4px;
                               }
                          }
