--- a/asset/sass/import/reset.scss
+++ b/asset/sass/import/reset.scss
@@ -48,7 +48,8 @@ h6 {
 body {
     position: relative;
     font-family: $mainfont;
-    background: rgb(238, 238, 238);
+    // background: rgb(238, 238, 238);
+    background: #fff;
 }
 
 p {
